learn/oauth2-proxy.yaml
apiVersion: v1
kind: Namespace
metadata:
  annotations:
    alpha.config.kubernetes.io/transformations: |
      - configuredIn: ../common/oauth2-proxy/base/kustomization.yaml
        configuredBy:
          apiVersion: builtin
          kind: NamespaceTransformer
      - configuredIn: ../common/oauth2-proxy/base/kustomization.yaml
        configuredBy:
          apiVersion: builtin
          kind: ImageTagTransformer
      - configuredIn: ../common/oauth2-proxy/base/kustomization.yaml
        configuredBy:
          apiVersion: builtin
          kind: ReplacementTransformer
    config.kubernetes.io/origin: |
      path: ../common/oauth2-proxy/base/namespace.yaml
  labels:
    app.kubernetes.io/managed-by: kustomize-v5.4.3
    pod-security.kubernetes.io/enforce: restricted
  name: oauth2-proxy
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    alpha.config.kubernetes.io/transformations: |
      - configuredIn: ../common/oauth2-proxy/base/kustomization.yaml
        configuredBy:
          apiVersion: builtin
          kind: NamespaceTransformer
      - configuredIn: ../common/oauth2-proxy/base/kustomization.yaml
        configuredBy:
          apiVersion: builtin
          kind: ImageTagTransformer
      - configuredIn: ../common/oauth2-proxy/base/kustomization.yaml
        configuredBy:
          apiVersion: builtin
          kind: ReplacementTransformer
    config.kubernetes.io/origin: |
      path: ../common/oauth2-proxy/base/service.yaml
  labels:
    app.kubernetes.io/managed-by: kustomize-v5.4.3
  name: oauth2-proxy
  namespace: oauth2-proxy
spec:
  ports:
  - name: http
    port: 80
    targetPort: http
  publishNotReadyAddresses: true
  selector:
    app.kubernetes.io/name: oauth2-proxy
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    alpha.config.kubernetes.io/transformations: |
      - configuredIn: ../common/oauth2-proxy/base/kustomization.yaml
        configuredBy:
          apiVersion: builtin
          kind: NamespaceTransformer
      - configuredIn: ../common/oauth2-proxy/base/kustomization.yaml
        configuredBy:
          apiVersion: builtin
          kind: ImageTagTransformer
      - configuredIn: ../common/oauth2-proxy/base/kustomization.yaml
        configuredBy:
          apiVersion: builtin
          kind: ReplacementTransformer
    config.kubernetes.io/origin: |
      path: ../common/oauth2-proxy/base/deployment.yaml
  labels:
    app: oauth2-proxy
    app.kubernetes.io/managed-by: kustomize-v5.4.3
  name: oauth2-proxy
  namespace: oauth2-proxy
spec:
  replicas: 2
  selector:
    matchLabels:
      app.kubernetes.io/name: oauth2-proxy
  template:
    metadata:
      labels:
        app.kubernetes.io/name: oauth2-proxy
    spec:
      containers:
      - args:
        - --http-address=0.0.0.0:4180
        - --config=/etc/oauth2_proxy/oauth2_proxy.cfg
        image: quay.io/oauth2-proxy/oauth2-proxy:v7.7.1
        livenessProbe:
          httpGet:
            path: /ping
            port: http
            scheme: HTTP
        name: oauth2-proxy
        ports:
        - containerPort: 4180
          name: http
          protocol: TCP
        - containerPort: 44180
          name: metrics
          protocol: TCP
        readinessProbe:
          httpGet:
            path: /ready
            port: http
            scheme: HTTP
        resources: {}
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            drop:
            - ALL
          runAsNonRoot: true
          seccompProfile:
            type: RuntimeDefault
        volumeMounts:
        - mountPath: /etc/oauth2_proxy/oauth2_proxy.cfg
          name: oauth2-proxy-config
          readOnly: true
          subPath: oauth2_proxy.cfg
        - mountPath: /custom-theme/kubeflow-logo.svg
          name: oauth2-proxy-theme
          readOnly: true
          subPath: kubeflow-logo.svg
      volumes:
      - configMap:
          name: oauth2-proxy-hk55gm96k4
        name: oauth2-proxy-config
      - configMap:
          name: oauth2-proxy-theme-5t624ft8b8
        name: oauth2-proxy-theme
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  annotations:
    alpha.config.kubernetes.io/transformations: |
      - configuredIn: ../common/oauth2-proxy/base/kustomization.yaml
        configuredBy:
          apiVersion: builtin
          kind: NamespaceTransformer
      - configuredIn: ../common/oauth2-proxy/base/kustomization.yaml
        configuredBy:
          apiVersion: builtin
          kind: ImageTagTransformer
      - configuredIn: ../common/oauth2-proxy/base/kustomization.yaml
        configuredBy:
          apiVersion: builtin
          kind: ReplacementTransformer
    config.kubernetes.io/origin: |
      path: ../common/oauth2-proxy/base/virtualservice.yaml
  labels:
    app.kubernetes.io/managed-by: kustomize-v5.4.3
  name: oauth2-proxy
  namespace: oauth2-proxy
spec:
  gateways:
  - kubeflow/kubeflow-gateway
  hosts:
  - '*'
  http:
  - match:
    - uri:
        prefix: /oauth2/
    route:
    - destination:
        host: oauth2-proxy.oauth2-proxy.svc.cluster.local
        port:
          number: 80
---
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  annotations:
    config.kubernetes.io/origin: |
      path: ../common/oauth2-proxy/components/istio-external-auth/authorizationpolicy.istio-ingressgateway-oauth2-proxy.yaml
  labels:
    app.kubernetes.io/managed-by: kustomize-v5.4.3
  name: istio-ingressgateway-oauth2-proxy
  namespace: istio-system
spec:
  action: CUSTOM
  provider:
    name: oauth2-proxy
  rules:
  - to:
    - operation:
        notPaths:
        - /dex/*
        - /dex/**
        - /oauth2/*
    when:
    - key: request.headers[authorization]
      notValues:
      - '*'
  selector:
    matchLabels:
      app: istio-ingressgateway
---
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  annotations:
    config.kubernetes.io/origin: |
      path: ../common/oauth2-proxy/components/istio-external-auth/authorizationpolicy.istio-ingressgateway-require-jwt.yaml
  labels:
    app.kubernetes.io/managed-by: kustomize-v5.4.3
  name: istio-ingressgateway-require-jwt
  namespace: istio-system
spec:
  action: DENY
  rules:
  - from:
    - source:
        notRequestPrincipals:
        - '*'
    to:
    - operation:
        notPaths:
        - /dex/*
        - /dex/**
        - /oauth2/*
  selector:
    matchLabels:
      app: istio-ingressgateway
---
apiVersion: security.istio.io/v1beta1
kind: RequestAuthentication
metadata:
  annotations:
    config.kubernetes.io/origin: |
      path: ../common/oauth2-proxy/components/istio-external-auth/requestauthentication.dex-jwt.yaml
  labels:
    app.kubernetes.io/managed-by: kustomize-v5.4.3
  name: dex-jwt
  namespace: istio-system
spec:
  jwtRules:
  - forwardOriginalToken: true
    fromHeaders:
    - name: Authorization
      prefix: 'Bearer '
    issuer: http://dex.auth.svc.cluster.local:5556/dex
    outputClaimToHeaders:
    - claim: email
      header: kubeflow-userid
    - claim: groups
      header: kubeflow-groups
  selector:
    matchLabels:
      app: istio-ingressgateway
